[project]
name = "langchain-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "gradio>=6.14.0",
    "langchain>=1.3.1",
    "langchain-google-genai>=4.2.3",
    "langchain-groq>=1.1.2",
    "langchain-tavily>=0.2.18",
    "netfree-unstrict-ssl>=0.1.2",
    "python-dotenv>=1.2.2",
]
